[package]
name = "termie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.31.1"
tar = "0.4.40"
nix = { version = "0.29.0", default-features = false, features = ["term", "process", "fs", "ioctl"] }
tempfile = "3.10.0"
thiserror = "1.0.56"
itertools = "0.14.0"

[build-dependencies]
tar = "0.4.40"
